# cgp

./: .coveragerc  AUTHORS.rst  LICENSE.txt  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
examples/: example_plot.py  example_py.py  example_sym.py
src/cgp/: bases.py  model.py  skeleton.py  utils.py
src/examples/: example_pi.py  example_sym.py
tests/: conftest.py  test_model.py  test_skeleton.py
