# Currently, it doesn't intended for publication on PyPi
[metadata]
name = cgp
description = Implementation of Cartesian Genetic Programming
author = Dmitry E. Kislov
author_email = kislov@easydan.com
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/scidam/cgp
project_urls =
    Source = https://github.com/scidam/cgp
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    src

install_requires =
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov


[tool:pytest]
addopts =
    --cov cgp --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
testpaths = tests


[bdist_wheel]
universal = 1



